--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -478,7 +478,7 @@ ptable > div.md-table-container > pttoolbar md-toolbar.md-table-toolbar form > i
 }
 
 ptable > div.md-table-container > pttoolbar md-toolbar.md-table-toolbar form {
-  margin-left: 16px;
+  margin-left: 30px;
 }
 
 .th-checkbox {
@@ -584,4 +584,1261 @@ md-select.md-select-paginator {
   .md-table-pagination > .last-item{
     margin-left: -20px;
   }
+}
+
+@media screen and (max-width: 600px) {
+  .c3 {
+    display: none;
+  }
+  .c4 {
+    display: none;
+  }
+  .c5 {
+    display: none;
+  }
+  .c6 {
+    display: none;
+  }
+  .c7 {
+    display: none;
+  }
+  .c8 {
+    display: none;
+  }
+  .c9 {
+    display: none;
+  }
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p3 {
+    display: none;
+  }
+  .p4 {
+    display: none;
+  }
+  .p5 {
+    display: none;
+  }
+  .p6 {
+    display: none;
+  }
+  .p7 {
+    display: none;
+  }
+  .p8 {
+    display: none;
+  }
+  .p9 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs2 {
+    display: none;
+  }
+  .cs3 {
+    display: none;
+  }
+  .cs4 {
+    display: none;
+  }
+  .cs5 {
+    display: none;
+  }
+  .cs6 {
+    display: none;
+  }
+  .cs7 {
+    display: none;
+  }
+  .cs8 {
+    display: none;
+  }
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps2 {
+    display: none;
+  }
+  .ps3 {
+    display: none;
+  }
+  .ps4 {
+    display: none;
+  }
+  .ps5 {
+    display: none;
+  }
+  .ps6 {
+    display: none;
+  }
+  .ps7 {
+    display: none;
+  }
+  .ps8 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm1 {
+    display: none;
+  }
+  .csm2 {
+    display: none;
+  }
+  .csm3 {
+    display: none;
+  }
+  .csm4 {
+    display: none;
+  }
+  .csm5 {
+    display: none;
+  }
+  .csm6 {
+    display: none;
+  }
+  .csm7 {
+    display: none;
+  }
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm1 {
+    display: none;
+  }
+  .psm2 {
+    display: none;
+  }
+  .psm3 {
+    display: none;
+  }
+  .psm4 {
+    display: none;
+  }
+  .psm5 {
+    display: none;
+  }
+  .psm6 {
+    display: none;
+  }
+  .psm7 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+
+}
+
+@media screen and (max-width: 720px) {
+  .c4 {
+    display: none;
+  }
+  .c5 {
+    display: none;
+  }
+  .c6 {
+    display: none;
+  }
+  .c7 {
+    display: none;
+  }
+  .c8 {
+    display: none;
+  }
+  .c9 {
+    display: none;
+  }
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p4 {
+    display: none;
+  }
+  .p5 {
+    display: none;
+  }
+  .p6 {
+    display: none;
+  }
+  .p7 {
+    display: none;
+  }
+  .p8 {
+    display: none;
+  }
+  .p9 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs3 {
+    display: none;
+  }
+  .cs4 {
+    display: none;
+  }
+  .cs5 {
+    display: none;
+  }
+  .cs6 {
+    display: none;
+  }
+  .cs7 {
+    display: none;
+  }
+  .cs8 {
+    display: none;
+  }
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps3 {
+    display: none;
+  }
+  .ps4 {
+    display: none;
+  }
+  .ps5 {
+    display: none;
+  }
+  .ps6 {
+    display: none;
+  }
+  .ps7 {
+    display: none;
+  }
+  .ps8 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm2 {
+    display: none;
+  }
+  .csm3 {
+    display: none;
+  }
+  .csm4 {
+    display: none;
+  }
+  .csm5 {
+    display: none;
+  }
+  .csm6 {
+    display: none;
+  }
+  .csm7 {
+    display: none;
+  }
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm2 {
+    display: none;
+  }
+  .psm3 {
+    display: none;
+  }
+  .psm4 {
+    display: none;
+  }
+  .psm5 {
+    display: none;
+  }
+  .psm6 {
+    display: none;
+  }
+  .psm7 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .c5 {
+    display: none;
+  }
+  .c6 {
+    display: none;
+  }
+  .c7 {
+    display: none;
+  }
+  .c8 {
+    display: none;
+  }
+  .c9 {
+    display: none;
+  }
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p5 {
+    display: none;
+  }
+  .p6 {
+    display: none;
+  }
+  .p7 {
+    display: none;
+  }
+  .p8 {
+    display: none;
+  }
+  .p9 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs4 {
+    display: none;
+  }
+  .cs5 {
+    display: none;
+  }
+  .cs6 {
+    display: none;
+  }
+  .cs7 {
+    display: none;
+  }
+  .cs8 {
+    display: none;
+  }
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps4 {
+    display: none;
+  }
+  .ps5 {
+    display: none;
+  }
+  .ps6 {
+    display: none;
+  }
+  .ps7 {
+    display: none;
+  }
+  .ps8 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm3 {
+    display: none;
+  }
+  .csm4 {
+    display: none;
+  }
+  .csm5 {
+    display: none;
+  }
+  .csm6 {
+    display: none;
+  }
+  .csm7 {
+    display: none;
+  }
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm3 {
+    display: none;
+  }
+  .psm4 {
+    display: none;
+  }
+  .psm5 {
+    display: none;
+  }
+  .psm6 {
+    display: none;
+  }
+  .psm7 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .c6 {
+    display: none;
+  }
+  .c7 {
+    display: none;
+  }
+  .c8 {
+    display: none;
+  }
+  .c9 {
+    display: none;
+  }
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p6 {
+    display: none;
+  }
+  .p7 {
+    display: none;
+  }
+  .p8 {
+    display: none;
+  }
+  .p9 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs5 {
+    display: none;
+  }
+  .cs6 {
+    display: none;
+  }
+  .cs7 {
+    display: none;
+  }
+  .cs8 {
+    display: none;
+  }
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps5 {
+    display: none;
+  }
+  .ps6 {
+    display: none;
+  }
+  .ps7 {
+    display: none;
+  }
+  .ps8 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm4 {
+    display: none;
+  }
+  .csm5 {
+    display: none;
+  }
+  .csm6 {
+    display: none;
+  }
+  .csm7 {
+    display: none;
+  }
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm4 {
+    display: none;
+  }
+  .psm5 {
+    display: none;
+  }
+  .psm6 {
+    display: none;
+  }
+  .psm7 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1120px) {
+  .c7 {
+    display: none;
+  }
+  .c8 {
+    display: none;
+  }
+  .c9 {
+    display: none;
+  }
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p7 {
+    display: none;
+  }
+  .p8 {
+    display: none;
+  }
+  .p9 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs6 {
+    display: none;
+  }
+  .cs7 {
+    display: none;
+  }
+  .cs8 {
+    display: none;
+  }
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps6 {
+    display: none;
+  }
+  .ps7 {
+    display: none;
+  }
+  .ps8 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm5 {
+    display: none;
+  }
+  .csm6 {
+    display: none;
+  }
+  .csm7 {
+    display: none;
+  }
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm5 {
+    display: none;
+  }
+  .psm6 {
+    display: none;
+  }
+  .psm7 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .c8 {
+    display: none;
+  }
+  .c9 {
+    display: none;
+  }
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p8 {
+    display: none;
+  }
+  .p9 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs7 {
+    display: none;
+  }
+  .cs8 {
+    display: none;
+  }
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps7 {
+    display: none;
+  }
+  .ps8 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm6 {
+    display: none;
+  }
+  .csm7 {
+    display: none;
+  }
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm6 {
+    display: none;
+  }
+  .psm7 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .c9 {
+    display: none;
+  }
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p9 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs8 {
+    display: none;
+  }
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps8 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm7 {
+    display: none;
+  }
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm7 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .c10 {
+    display: none;
+  }
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p10 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs9 {
+    display: none;
+  }
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps9 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm8 {
+    display: none;
+  }
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm8 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1760px) {
+  .c11 {
+    display: none;
+  }
+  .c12 {
+    display: none;
+  }
+  .p11 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs10 {
+    display: none;
+  }
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps10 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm9 {
+    display: none;
+  }
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm9 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1920px) {
+  .c12 {
+    display: none;
+  }
+  .p12 {
+    display: none;
+  }
+
+  .cs11 {
+    display: none;
+  }
+  .cs12 {
+    display: none;
+  }
+  .ps11 {
+    display: none;
+  }
+  .ps12 {
+    display: none;
+  }
+
+  .csm10 {
+    display: none;
+  }
+  .csm11 {
+    display: none;
+  }
+  .csm12 {
+    display: none;
+  }
+  .psm10 {
+    display: none;
+  }
+  .psm11 {
+    display: none;
+  }
+  .psm12 {
+    display: none;
+  }
+}
+
+.pit-table-responive {
+  table-layout: fixed;
+}
+
+.td-resize {
+  padding-top: 8px;
+  border-top-style: none;
+  text-align: initial;
+}
+
+.ptdrender-resize {
+  display: inline-table;
+}
+
+.label-font-size {
+  font-size: 12px;
+}
+
+ptable > div.md-table-container table.md-table {
+  border-collapse: unset;
+}
+
+.th-span-format {
+  white-space: normal;
+  display: inline-flex;
+}
+
+.th-span-fielset {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.no-border-bottom {
+  border-bottom-style: none;
 }
