--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,42 @@
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('../fonts/Material Icons'),
+       local('../fonts/MaterialIcons-Regular'),
+       url(../fonts/MaterialIcons-Regular.woff2) format('woff2'),
+       url(../fonts/MaterialIcons-Regular.woff) format('woff'),
+       url(../fonts/MaterialIcons-Regular.ttf) format('truetype');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
+$fa-font-path: "../fonts";
+
 /* PIT TABLE COMMON */
 ptable table > thead > tr > th.sortable {
   cursor: pointer;
@@ -23,6 +62,7 @@ ptable table > thead > tr > th > span {
   width: 30px;
 }
 
+/* IE 10 & 11 */
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   #loading-container {
     top: 15px;
@@ -39,6 +79,17 @@ ptable table > thead > tr > th > span {
   .pitable-btn-more-info {
     top: 3px;
   }
+}
+
+/* Microsoft Edge 12+ */
+@supports (-ms-accelerator:true) {
+  md-select.md-select-paginator .md-select-value {
+    top: 10px;
+  }
+
+  .item-md-table-paginator.have-md-select {
+    margin: 5px 0 15px 0 !important;
+  } 
 }
 
 .pt-input-search::-ms-clear {
